--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -27,6 +27,7 @@
 
 .movies_card--detail{
     position: absolute;
+    width: 70%;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
@@ -42,12 +43,11 @@
 }
 
 .movies_card--btn {
-    outline:none;
-    border:none;
     text-align: center;
-    padding:1rem 0;
+    padding:1rem 2rem;
     color:white;
     background:green;
+    font-size: 1.5rem;
     transition: all .3s ease-in;
     transform:translateY(200%)
 }
