phase first complete

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,9 @@
 @import "./style/components/pagination"; 
 @import "./style/components/header"; 
 @import "./style/components/avatar"; 
+@import "./style/components/tabDownload"; 
+@import "./style/components/review"; 
+@import "./style/components/comment"; 
 
 
 @import "./style/layout/silhouette";
