--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,9 @@
 $dark-green : #6ac045;
+$light-website:#1d1d1d;
 $dark-website: #171717;
 
 
 // font style
 $font-grey:#919191;
+$font-grey-dark:#4b4b4b;
+$light-white:rgba(255, 255, 255, 0.1)
