--- a/src/style/pages/_detail.scss
+++ b/src/style/pages/_detail.scss
@@ -1,6 +1,7 @@
 .detail {
     background: #171717;
     color: white;
+    flex:1
 }
   
 .detail > div {
@@ -109,4 +110,5 @@
 
 .detail_about{
   display: flex;
+  flex:1
 }
